--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#ADD8E6</color>
+    <color name="Hot_Pink">#FF69B4</color>
+    <color name="Magenta">#FF00FF</color>
+    <color name="Purple">#800080</color>
+    <color name="Indigo">#4B0082</color>
+    <color name="BROWN">#A52A2A</color>
+    <color name="blue">#0000FF</color>
+    <color name="dark_blue">#00008B</color>
+    <color name="sky_blue">#87CEEB</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="turquoise">#40E0D0</color>
+    <color name="teal">#008080</color>
+    <color name="navy">#000080</color>
+    <color name="light_gray">#D3D3D3</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="gray">#808080</color>
+    <color name="dark_gray">#A9A9A9</color>
+    <color name="red">#FF0000</color>
+    <color name="dark_red">#8B0000</color>
+    <color name="orange">#FFA500</color>
+    <color name="dark_orange">#FF8C00</color>
+    <color name="gold">#FFD700</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="amber">#FFBF00</color>
+    <color name="lime_green">#32CD32</color>
+    <color name="forest_green">#228B22</color>
+    <color name="olive">#808000</color>
+    <color name="dark_green">#006400</color>
+    <color name="sea_green">#2E8B57</color>
+    <color name="pale_green">#98FB98</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="teal_200">#03DAC5</color>
+    <color name="teal_700">#018786</color>
 </resources>
